--- a/tenmo-server/src/main/resources/templates/login.html
+++ b/tenmo-server/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Log in Screen</title>
@@ -53,7 +53,7 @@
     <body>
     <h1>Authenticate</h1><hr>
 
-    <form action="/submit" method="post">
+    <form th:action="@{/success}" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username"><br><br>
         <label for="password">Password:</label>
@@ -62,7 +62,12 @@
     </form>
 
     <div class="signup">
-        <p> <a href="signup.html">Don't have an account?</a> </p>
+        <!--  eventually we'll need to redirect user to signup
+              replace href with:
+
+              href="signup.html"-->
+
+        <p> <a th:href="@{/signup}">Don't have an account?</a> </p>
     </div>
 
     </body>
