Moved methods to relevant services, adjusted services, moved frontend code to its directory

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -38,7 +38,12 @@
       background-color: #0056b3;
     }
 
-    .signup {
+    .register {
         text-align: center;
         color: #007BFF;
+    }
+
+    .login{
+      text-align: center;
+      color: #007BFF;
     }
